--- a/Part_1/index.html
+++ b/Part_1/index.html
@@ -82,6 +82,170 @@
       </div>
     </div>
   </div>
+  <div class="container">
+    <div class="title_body title_body_key_product">Наши <span>ключевые продукты</span> для инвестиций</div>
+    <div class="key_product_cards">
+      <div class="key_product_card">
+        <div class="text text_key_product_card">
+          Платформа для автоследования
+          <span>Копирование стратегий в автономном режиме</span>
+        </div>
+        <div class="key_product_card_img">
+          <img src="./image/Risk level… 3.png" alt="Risk level">
+        </div>
+      </div>
+      <div class="key_product_card">
+        <div class="text text_key_product_card">
+          Платформа для робо-эдвайзинга
+          <span>Персонализированный подбор стратегий исходя из заданных параметров</span>
+        </div>
+        <div class="key_product_card_img">
+          <img src="./image/Risk level… 1.png" alt="Risk level">
+        </div>
+      </div>
+    </div>
+
+    <div class="bottom_content">
+      <div class="bottom_content_left">
+        <div class="title_body ">
+          <span>Представляем ценность</span> для брокера и банка
+        </div>
+        <div class="text">
+          <span>Мы помогаем брокерам и банкам запустить собственное мобильное приложение для инвестиций в короткие сроки
+            и с экономией бюджета</span>
+        </div>
+        <button class="main_button main_button_inner_content">Заказать демо </button>
+      </div>
+      <div class="bottom_content_right">
+        <div class="min_card">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_1_2808)">
+              <path
+                d="M20.4167 39.9999C31.2323 39.9999 40 31.2322 40 20.4166C40 9.60101 31.2323 0.833252 20.4167 0.833252C9.60113 0.833252 0.833374 9.60101 0.833374 20.4166C0.833374 31.2322 9.60113 39.9999 20.4167 39.9999Z"
+                fill="#EFF9FF" />
+              <path
+                d="M9.16671 9.16659C13.769 9.16659 17.5 7.3011 17.5 4.99992C17.5 2.69874 13.769 0.833252 9.16671 0.833252C4.56433 0.833252 0.833374 2.69874 0.833374 4.99992C0.833374 7.3011 4.56433 9.16659 9.16671 9.16659Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M0.833374 5C0.833374 5 0.833374 8.53217 0.833374 10.8333C0.833374 13.1345 4.56433 15 9.16671 15C13.769 15 17.5 13.1345 17.5 10.8333C17.5 9.47033 17.5 5 17.5 5"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M0.833374 10.8333C0.833374 10.8333 0.833374 14.3654 0.833374 16.6666C0.833374 18.9678 4.56433 20.8333 9.16671 20.8333C13.769 20.8333 17.5 18.9678 17.5 16.6666C17.5 15.3036 17.5 10.8333 17.5 10.8333"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M0.833374 16.6667C0.833374 16.6667 0.833374 20.1989 0.833374 22.5001C0.833374 24.8012 4.56433 26.6667 9.16671 26.6667C13.769 26.6667 17.5 24.8012 17.5 22.5001C17.5 21.1371 17.5 16.6667 17.5 16.6667"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M0.833374 22.5C0.833374 22.5 0.833374 26.0322 0.833374 28.3333C0.833374 30.6345 4.56433 32.5 9.16671 32.5C13.769 32.5 17.5 30.6345 17.5 28.3333C17.5 26.9703 17.5 22.5 17.5 22.5"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M25.8333 20.8333C30.4357 20.8333 34.1667 18.9678 34.1667 16.6667C34.1667 14.3655 30.4357 12.5 25.8333 12.5C21.231 12.5 17.5 14.3655 17.5 16.6667C17.5 18.9678 21.231 20.8333 25.8333 20.8333Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M17.5 16.6667C17.5 16.6667 17.5 20.1989 17.5 22.5001C17.5 24.8012 21.231 26.6667 25.8333 26.6667C30.4357 26.6667 34.1667 24.8012 34.1667 22.5001C34.1667 21.1371 34.1667 16.6667 34.1667 16.6667"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M17.5 22.5C17.5 22.5 17.5 26.0322 17.5 28.3333C17.5 30.6345 21.231 32.5 25.8333 32.5C30.4357 32.5 34.1667 30.6345 34.1667 28.3333C34.1667 26.9703 34.1667 22.5 34.1667 22.5"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+            </g>
+            <defs>
+              <clipPath id="clip0_1_2808">
+                <rect width="40" height="40" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+          <div class="text">
+            <span>Экономим время и деньги
+              на запусĸ digital сервисов</span>
+          </div>
+        </div>
+        <div class="min_card">
+          <svg width="40" height="38" viewBox="0 0 40 38" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_1_2823)">
+              <path
+                d="M21.2 37.6C31.583 37.6 40 29.183 40 18.8C40 8.41705 31.583 0 21.2 0C10.8171 0 2.40002 8.41705 2.40002 18.8C2.40002 29.183 10.8171 37.6 21.2 37.6Z"
+                fill="#EFF9FF" />
+              <path
+                d="M16.8 8.80005C19.0092 8.80005 20.8 7.00917 20.8 4.80005C20.8 2.59091 19.0092 0.800049 16.8 0.800049C14.5909 0.800049 12.8 2.59091 12.8 4.80005C12.8 7.00917 14.5909 8.80005 16.8 8.80005Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M19.2 13.6001H14.4C13.657 13.6001 13.2856 13.6001 12.9727 13.6309C9.93403 13.9302 7.53003 16.3342 7.23075 19.3728C7.19995 19.6857 7.19995 20.0571 7.19995 20.8001H26.4C26.4 20.0571 26.4 19.6857 26.3692 19.3728C26.0699 16.3342 23.6659 13.9302 20.6272 13.6309C20.3144 13.6001 19.9429 13.6001 19.2 13.6001Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M30.4 19.0273C31.9214 20.0067 32.8 21.1625 32.8 22.4004C32.8 25.935 25.6366 28.8004 16.8 28.8004C7.96349 28.8004 0.800049 25.935 0.800049 22.4004C0.800049 21.1625 1.67866 20.0067 3.20005 19.0273"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M12.8 24.8L16.8 28.8L12.8 32.8001" stroke="#0962E8" stroke-linecap="round"
+                stroke-linejoin="round" />
+            </g>
+            <defs>
+              <clipPath id="clip0_1_2823">
+                <rect width="40" height="37.6" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+
+          <div class="text">
+            <span>Создаем канал привлечения новых клиентов</span>
+          </div>
+        </div>
+        <div class="min_card">
+          <svg width="40" height="40" viewBox="0 0 40 40" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_1_2800)">
+              <path
+                d="M20.4167 40.0002C31.2323 40.0002 40 31.2324 40 20.4168C40 9.60125 31.2323 0.833496 20.4167 0.833496C9.60113 0.833496 0.833374 9.60125 0.833374 20.4168C0.833374 31.2324 9.60113 40.0002 20.4167 40.0002Z"
+                fill="#EFF9FF" />
+              <path
+                d="M8.92804 14.6432C12.084 14.6432 14.6423 12.0848 14.6423 8.92892C14.6423 5.77297 12.084 3.2146 8.92804 3.2146C5.77211 3.2146 3.21375 5.77297 3.21375 8.92892C3.21375 12.0848 5.77211 14.6432 8.92804 14.6432Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M26.0708 31.786C29.2267 31.786 31.785 29.2276 31.785 26.0718C31.785 22.9158 29.2267 20.3574 26.0708 20.3574C22.9149 20.3574 20.3564 22.9158 20.3564 26.0718C20.3564 29.2276 22.9149 31.786 26.0708 31.786Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M17.5 34.1667C8.29531 34.1667 0.833374 26.7048 0.833374 17.5L6.38889 20.2778" stroke="#0962E8"
+                stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M17.5 0.833496C26.7048 0.833496 34.1667 8.29538 34.1667 17.5002L28.6111 14.7224" stroke="#0962E8"
+                stroke-linecap="round" stroke-linejoin="round" />
+            </g>
+            <defs>
+              <clipPath id="clip0_1_2800">
+                <rect width="40" height="40" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+
+          <div class="text">
+            <span>Помогаем увеличить выручку путем запуска нового продукта</span>
+          </div>
+        </div>
+        <div class="min_card">
+          <svg width="40" height="41" viewBox="0 0 40 41" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <g clip-path="url(#clip0_1_2818)">
+              <path
+                d="M20.4167 40.8334C31.2323 40.8334 40 32.0657 40 21.2501C40 10.4345 31.2323 1.66675 20.4167 1.66675C9.60113 1.66675 0.833374 10.4345 0.833374 21.2501C0.833374 32.0657 9.60113 40.8334 20.4167 40.8334Z"
+                fill="#EFF9FF" />
+              <path
+                d="M17.5 12.4999C20.7216 12.4999 23.3333 9.88825 23.3333 6.66659C23.3333 3.44493 20.7216 0.833252 17.5 0.833252C14.2783 0.833252 11.6666 3.44493 11.6666 6.66659C11.6666 9.88825 14.2783 12.4999 17.5 12.4999Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+              <path d="M0.833374 31.6666C0.833374 24.3028 7.54912 18.3333 15.8334 18.3333" stroke="#0962E8"
+                stroke-linecap="round" stroke-linejoin="round" />
+              <path
+                d="M24.0417 20.8333C22.2698 20.8333 20.8334 22.5071 20.8334 24.5719C20.8334 28.3105 24.625 31.7093 26.6667 32.4999C28.7084 31.7093 32.5 28.3105 32.5 24.5719C32.5 22.5071 31.0636 20.8333 29.2917 20.8333C28.2066 20.8333 27.2473 21.461 26.6667 22.4218C26.0861 21.461 25.1268 20.8333 24.0417 20.8333Z"
+                stroke="#0962E8" stroke-linecap="round" stroke-linejoin="round" />
+            </g>
+            <defs>
+              <clipPath id="clip0_1_2818">
+                <rect width="40" height="40.8333" fill="white" />
+              </clipPath>
+            </defs>
+          </svg>
+
+
+          <div class="text">
+            <span>Повышаем лояльность действующих клиентов</span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 
 </html>
